--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,10 @@
   "name": "travel_assistant_api",
   "version": "2023.8.1",
   "description": "\"Travel assistant api for getting weather forecast, GPD and exchange rates by country\"",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "npm run test"
+    "test": "npm run test",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "travel_assistant",
@@ -13,6 +14,7 @@
   "author": "Feliciano Mazoio",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
