--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,11 @@
   "author": "Feliciano Mazoio",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.9",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sequelize": "^6.32.1",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
