--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
   "author": "Feliciano Mazoio",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.0",
     "config": "^3.3.9",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6"
   },
