--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "Feliciano Mazoio",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "config": "^3.3.9",
     "cors": "^2.8.5",
