--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.0",
     "sass": "^1.64.2",
+    "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
