--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6"
